--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+#planilhas
+pedidos.csv
+itens_pedidos.csv
+produtos.csv
+vendedores.csv
